coins-1.5-en/test/c-not-for-auto-test/SyntaxError/tpDeclError1.c
/* tpDeclError1.c  Fukuda-i mail 031017 */
/*   Followings should be syntax error. */

int a*;
int *(b[1])*[2];

